// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`YesNoPipe should return no for false 1`] = `
<ng-component
  __ngContext__={[Function Number]}
>
  <span>
    no
  </span>
</ng-component>
`;

exports[`YesNoPipe should return yes for true 1`] = `
<ng-component
  __ngContext__="0"
>
  <span>
    yes
  </span>
</ng-component>
`;
